fix: layout bug

--- a/css/new-age.css
+++ b/css/new-age.css
@@ -344,6 +344,7 @@ section.contact h2 i {
 section.contact ul.list-social {
   margin-bottom: 0;
   display: flex;
+  flex-wrap: wrap;
   flex-direction: row;
   justify-content: center;
 }
